# iac-ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.env
knowledge/: user_preference.txt
src/hierarchical_crew_automation_for_iac_with_llm_management/: crew.py  main.py
src/hierarchical_crew_automation_for_iac_with_llm_management/config/: agents.yaml  tasks.yaml
src/hierarchical_crew_automation_for_iac_with_llm_management/tools/: git_clone_tool.py
